Fix overflow bug that introduced scroll bars in site header search button when visually unhiding element #1628

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -19,7 +19,7 @@
   clip: auto;
   height: auto;
   margin: 0;
-  overflow: auto;
+  overflow: unset;
   position: static;
   width: auto;
   user-select: unset;
